Changes for 2.0.15rc1

New features:
A.F....... [ZBX-1357] updated Polish translation; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-8993] added check for a valid reference of a global regular expression in lld rules (igors)
.......PS. [ZBX-9088] fixed parsing of SNMP traps for correct processing of delayed traps (igors)
A......... [ZBX-9093] fixed API host.create method for MySQL strict mode when given partial data in "inventory" property (Ivo)
....I..... [ZBX-9168] fixed incorrect keys and added missing keys in the item key helper (Richlv)
A......... [ZBX-9197] fixed PHP fatal error "Call to undefined function array_fill_keys()" in trigger.get method with PHP<5.2.0 (Sasha)
.......P.. [ZBX-9195] fixed lastlogsize and mtime being updated on proxy for unsupported items; thanks to Yoshinori Komuro for patch (asaveljevs, Sasha)
.......PS. [ZBX-8828] made ICMP items go unsupported if ICMP packets cannot be sent to their host (asaveljevs)
........S. [ZBX-9176] fixed {DISCOVERY.SERVICE.NAME} macro to expand properly for HTTPS and Telnet services (asaveljevs)
........S. [ZBX-9126] fixed processing of trigger/graph prototypes in case when all item prototypes in trigger/graph prototypes were changed (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.14

2.0.14rc1 was released as 2.0.14 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.14rc1

New features:
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)
A.F....... [ZBX-1357] updated Italian, Polish and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8582] fixed SQL injection vulnerability in bar graphs (Ivo, Pavels)
..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)